--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "9094"
     environment:
       PORT_COMMAND: "docker port $$(hostname) 9094/tcp | cut -d: -f2"
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://:9092,OUTSIDE://10.61.212.36:_{PORT_COMMAND}
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://:9092,OUTSIDE://YOUR_PUBLIC_IP:_{PORT_COMMAND}
       KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
